--- a/style.css
+++ b/style.css
@@ -1,3 +1,61 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+    background-color: #EEF9BF;
+}
+
+.titulo {
+    width: 85%;
+    margin: 40px auto;
+    display: flex;
+    word-wrap: break-word;
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 56px;
+    color: #75B79E;
+    text-align: center;
+}
+
+ul {
+    list-style-type: none;
+    width: 906px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+li {
+    width: 117px;
+    height: 146px;
+    background-color: #99CEA8;
+    margin: 28px 17px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+li img {
+    width: 100px;
+    height: 100px;
+}
+
+@media (max-width: 600px) {
+    h1 {
+        font-size: 36px;
+    }
+
+    ul {
+        width: 100%;
+        align-items: center;
+        flex-direction: column;
+    }
+}
