--- a/style.css
+++ b/style.css
@@ -40,11 +40,14 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: all .5s;
+    transform-style: preserve-3d;
 }
 
 li img {
     width: 100px;
     height: 100px;
+    transition: all 0s;
 }
 
 li:hover {
@@ -57,6 +60,35 @@ li:hover {
 
 .verso {
     display: flex;
+}
+
+.virado {
+    transform: rotateY(180deg)
+}
+
+.virado .frente {
+    display: flex;
+    transform: rotateY(-180deg)
+}
+
+.virado .verso {
+    display: none;
+}
+
+.correto .frente {
+    display: flex;
+}
+
+.correto .verso {
+    display: none;
+}
+
+.congelar-site {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    display: none;
 }
 
 @media (max-width: 600px) {
