--- a/style.css
+++ b/style.css
@@ -61,7 +61,8 @@ ul {
 li {
     width: 117px;
     height: 146px;
-    background-color: #99CEA8;
+    background-color: #A7E9AF;
+    border: 1px solid #99CEA8;
     border-radius: 5px;
     display: flex;
     justify-content: center;
